feat: add client certificate auth

--- a/custom/conf/app.example.ini
+++ b/custom/conf/app.example.ini
@@ -806,6 +806,9 @@ LEVEL = Info
 ;; Allow users to sign-in with a passkey
 ;ENABLE_PASSKEY_AUTHENTICATION = true
 ;;
+;; Allow sign-in using TLS client certificates
+;ENABLE_CLIENT_CERT_AUTHENTICATION = false
+;;
 ;; More detail: https://github.com/gogits/gogs/issues/165
 ;ENABLE_REVERSE_PROXY_AUTHENTICATION = false
 ; Enable this to allow reverse proxy authentication for API requests, the reverse proxy is responsible for ensuring that no CSRF is possible.
