Add trusted certificate store management

--- a/custom/conf/app.example.ini
+++ b/custom/conf/app.example.ini
@@ -2840,6 +2840,12 @@ LEVEL = Info
 ;; storage type
 ;STORAGE_TYPE = local
 
+[x509]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; Directory containing trusted root certificates
+TRUST_STORE_PATH = custom/trust-certs
+
 ;[global_lock]
 ;; Lock service type, could be memory or redis
 ;SERVICE_TYPE = memory
